--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<sonar.host.url>http://52.174.195.211:9000</sonar.host.url>
+		<sonar.host.url>http://bcimblab17.westeurope.cloudapp.azure.com:9000</sonar.host.url>
 		<sonar.jacoco.itReportPath>${basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
 		<sonar.jacoco.reportPath>${basedir}/target/jacoco.exec</sonar.jacoco.reportPath>
 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
@@ -102,12 +102,12 @@
 				<activeByDefault>false</activeByDefault>
 			</activation>
 			<properties>
-				<sonar.jdbc.url>jdbc:mysql://192.168.44.199/sonar?useUnicode=true&amp;characterEncoding=utf8</sonar.jdbc.url>
+				<!-- <sonar.jdbc.url>jdbc:mysql://192.168.44.199/sonar?useUnicode=true&amp;characterEncoding=utf8</sonar.jdbc.url>
 				<sonar.jdbc.driver>com.mysql.jdbc.Driver</sonar.jdbc.driver>
 				<sonar.jdbc.username>sonar</sonar.jdbc.username>
-				<sonar.jdbc.password>sonar</sonar.jdbc.password>
+				<sonar.jdbc.password>sonar</sonar.jdbc.password> -->
 				<!-- SERVER ON A REMOTE HOST -->
-				<sonar.host.url>http://192.168.44.199:9000</sonar.host.url>
+				<sonar.host.url>http://bcimblab17.westeurope.cloudapp.azure.com:9000</sonar.host.url>
 			</properties>
 
 		</profile>
