--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
@@ -18,24 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".currency.CurrencyListActivity"
-            android:label="@string/title_currency_list"
-            android:parentActivityName=".config.ConfigActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.bergcomputers.mobilebanking.MainActivity" />
-        </activity>
-        <activity
-            android:name=".currency.CurrencyDetailActivity"
-            android:label="@string/title_currency_detail"
-            android:parentActivityName=".currency.CurrencyListActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.bergcomputers.mobilebanking.currency.CurrencyListActivity" />
-        </activity>
+
         <activity
             android:name=".config.ConfigActivity"
             android:label="@string/title_activity_config"
@@ -46,6 +30,44 @@
                 android:value="com.bergcomputers.mobilebanking.MainActivity" />
         </activity>
 
+        <activity
+            android:name=".account.AccountListActivity"
+            android:label="@string/title_activity_config"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.bergcomputers.mobilebanking.MainActivity" />
+        </activity>
+
+        <activity
+            android:name=".account.AccountDetailActivity"
+            android:label="@string/title_currency_detail"
+            android:parentActivityName=".account.AccountListActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.bergcomputers.mobilebanking.account.AccountListActivity" />
+        </activity>
+        <activity
+            android:name=".transaction.TransactionListActivity"
+            android:label="@string/title_activity_beneficiary"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.bergcomputers.mobilebanking.MainActivity" />
+        </activity>
+
+        <activity
+            android:name=".transaction.TransactionDetailActivity"
+            android:label="@string/title_currency_detail"
+            android:parentActivityName=".transaction.TransactionListActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.bergcomputers.mobilebanking.transaction.TransactionListActivity" />
+        </activity>
         <activity
             android:name=".beneficiary.BeneficiaryListActivity"
             android:label="@string/title_activity_beneficiary"
@@ -65,6 +87,26 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.bergcomputers.mobilebanking.beneficiary.BeneficiaryListActivity" />
         </activity>
+
+        <activity
+            android:name=".currency.CurrencyListActivity"
+            android:label="@string/title_currency_list"
+            android:parentActivityName=".config.ConfigActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.bergcomputers.mobilebanking.MainActivity" />
+        </activity>
+        <activity
+            android:name=".currency.CurrencyDetailActivity"
+            android:label="@string/title_currency_detail"
+            android:parentActivityName=".currency.CurrencyListActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.bergcomputers.mobilebanking.currency.CurrencyListActivity" />
+        </activity>
+
     </application>
 
 </manifest>
